fix: keep Android session POST encoding API-compatible